# FinanceBecnh

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  invalid_score.md  new_benchmark.md  new_provider.md  submit_model_result.md
.github/workflows/: ci.yml  docs.yml  nightly.yml
configs/benchmark_groups/: core_real.yaml  smoke.yaml
configs/models/: anthropic.example.yaml  gemini.example.yaml  llamacpp.example.yaml  mock.yaml  ollama-qwen3b.example.yaml  ollama.example.yaml  openai.example.yaml  openai_compatible.example.yaml  openrouter.example.yaml  vllm.example.yaml
configs/pricing/: api_models.yaml
docs/: adding_benchmarks.md  adding_models.md  architecture.md  benchmarks.md  datasets.md  known_limitations.md  licenses.md  local_models.md  metrics.md  model_submission.md  providers.md  reproducibility.md  scoring.md
docs/research/: benchmark_review.md  current_gap_audit.md  final_core_gap_audit.md  post_core_gap_audit.md  scoring_design.md
docs/roadmap/: post_v0_1.md
release/v0.1.0-rc1/: BLOCKERS.md  RELEASE_NOTES.md  checksums.txt  gate_results.json  leaderboard.csv  paired_3b_vs_7b_finqa.json  paired_retrieval_arms.json  release_manifest.json  release_notes.md  report.html  report.md  results.json  results_tables.md
schemas/: result_manifest.schema.json
scripts/: check_docs_links.py  secret_scan_repo.py  setup_references.sh
src/financebench/: __init__.py  cli.py  release.py
src/financebench/config/: __init__.py  benchmark_group.py  model_config.py
src/financebench/datasets/: __init__.py  base.py  downloader.py
src/financebench/datasets/convfinqa/: adapter.py
src/financebench/datasets/finqa/: __init__.py  adapter.py
src/financebench/datasets/secque/: __init__.py  adapter.py
src/financebench/datasets/smb_cfo/: adapter.py  business.py  oracles.py
src/financebench/datasets/smoke/: __init__.py  adapter.py  samples.jsonl
src/financebench/evaluation/: __init__.py  benchmark_metrics.py  capability_map.py  failures.py  fingerprint.py  gates.py  grounding.py  refusal.py  scoring.py
src/financebench/evaluation/judge/: __init__.py  calibration.py  judge.py
src/financebench/evaluation/metrics/: __init__.py  base.py  exact_match.py
src/financebench/evaluation/native/: __init__.py  finqa.py  secque.py  smb_cfo.py
src/financebench/execution/: __init__.py  cache.py  engine.py  orchestration.py  retry.py
src/financebench/models/: __init__.py  anthropic.py  base.py  mock.py  ollama.py  openai.py  openai_compatible.py  pricing.py  verification.py
src/financebench/prompts/: __init__.py  renderer.py
src/financebench/reporting/: __init__.py  mission_report.py  release_report.py  retrieval_report.py
src/financebench/retrieval/: ablation.py  pipeline.py
src/financebench/schemas/: __init__.py  common.py  gates.py  leaderboard.py  manifest.py  metric.py  model_io.py  prediction.py  run.py  sample.py  tooling.py
src/financebench/storage/: __init__.py  artifacts.py  jsonl.py
src/financebench/utils/: __init__.py  errors.py  gitmeta.py  ids.py  secrets.py  timing.py
tests/: test_manifest_hygiene.py  test_version.py
tests/datasets/: test_finqa_e2e.py  test_secque.py  test_secque_e2e.py  test_smb_cfo_e2e.py  test_smoke_e2e.py
tests/fixtures/finqa/: README.md  test.json
tests/integration/: test_cli.py  test_run_artifacts.py  test_run_identity.py
tests/parity/: official_runner.py  setup_references.sh  test_finqa_parity.py
tests/unit/: test_api_providers.py  test_capability_map.py  test_datasets_registry.py  test_docs_links_script.py  test_evaluation_benchmark_metrics.py  test_execution_cache.py  test_execution_engine.py  test_execution_retry.py  test_gates_and_scoring.py  test_judge_calibration.py  test_metrics_exact_match.py  test_metrics_registry.py  test_mission_report.py  test_models_mock.py  test_models_openai_compatible.py  test_models_registry.py  test_refusal_detection.py  test_release_audit_regressions.py  test_release_gate_closure.py  test_release_manifest.py  test_retrieval_ablation.py  test_retrieval_scoping.py  test_schemas_common.py  test_schemas_manifest.py  test_schemas_misc.py  test_schemas_model_io.py  test_schemas_sample.py  test_secque_diagnostics.py  test_secret_scan_script.py  test_storage_jsonl.py  test_utils_errors.py  test_utils_ids.py  test_utils_secrets.py  test_utils_timing.py
